// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupFooter /> matches snapshot 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg aria-hidden=\\"true\\"
               focusable=\\"false\\"
               data-prefix=\\"fas\\"
               data-icon=\\"search-minus\\"
               class=\\"svg-inline--fa fa-search-minus fa-w-16 me-1\\"
               role=\\"img\\"
               xmlns=\\"http://www.w3.org/2000/svg\\"
               viewbox=\\"0 0 512 512\\"
          >
            <path fill=\\"currentColor\\"
                  d=\\"M304 192v32c0 6.6-5.4 12-12 12H124c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"search-plus\\"
             class=\\"svg-inline--fa fa-search-plus fa-w-16 me-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @cluster:
      </span>
      <span class=\\"components-label-value\\">
        default
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a href=\\"http://link.example.com\\"
     target=\\"_blank\\"
     rel=\\"noopener noreferrer\\"
     class=\\"components-label components-label-with-hover badge components-grid-annotation-link\\"
  >
    <svg aria-hidden=\\"true\\"
         focusable=\\"false\\"
         data-prefix=\\"fas\\"
         data-icon=\\"external-link-alt\\"
         class=\\"svg-inline--fa fa-external-link-alt fa-w-16 \\"
         role=\\"img\\"
         xmlns=\\"http://www.w3.org/2000/svg\\"
         viewbox=\\"0 0 512 512\\"
    >
      <path fill=\\"currentColor\\"
            d=\\"M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z\\"
      >
      </path>
    </svg>
    link
  </a>
</div>
"
`;

exports[`<GroupFooter /> mathes snapshot when silence is rendered 1`] = `
"
<div class=\\"card-footer components-grid-alertgrid-alertgroup-footer px-2 py-1\\">
  <div class=\\"mb-1\\">
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100\\">
        <span class=\\"cursor-pointer\\">
          <svg aria-hidden=\\"true\\"
               focusable=\\"false\\"
               data-prefix=\\"fas\\"
               data-icon=\\"search-minus\\"
               class=\\"svg-inline--fa fa-search-minus fa-w-16 me-1\\"
               role=\\"img\\"
               xmlns=\\"http://www.w3.org/2000/svg\\"
               viewbox=\\"0 0 512 512\\"
          >
            <path fill=\\"currentColor\\"
                  d=\\"M304 192v32c0 6.6-5.4 12-12 12H124c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h168c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z\\"
            >
            </path>
          </svg>
          <span class=\\"text-muted\\">
            summary:
          </span>
        </span>
        <span class=\\"Linkify\\">
          <span>
            This is summary
          </span>
        </span>
      </div>
    </div>
    <div class=\\" tooltip-trigger\\">
      <div class=\\"mb-1 p-1 bg-light d-inline-block rounded components-grid-annotation text-break mw-100 cursor-pointer\\">
        <svg aria-hidden=\\"true\\"
             focusable=\\"false\\"
             data-prefix=\\"fas\\"
             data-icon=\\"search-plus\\"
             class=\\"svg-inline--fa fa-search-plus fa-w-16 me-1\\"
             role=\\"img\\"
             xmlns=\\"http://www.w3.org/2000/svg\\"
             viewbox=\\"0 0 512 512\\"
        >
          <path fill=\\"currentColor\\"
                d=\\"M304 192v32c0 6.6-5.4 12-12 12h-56v56c0 6.6-5.4 12-12 12h-32c-6.6 0-12-5.4-12-12v-56h-56c-6.6 0-12-5.4-12-12v-32c0-6.6 5.4-12 12-12h56v-56c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v56h56c6.6 0 12 5.4 12 12zm201 284.7L476.7 505c-9.4 9.4-24.6 9.4-33.9 0L343 405.3c-4.5-4.5-7-10.6-7-17V372c-35.3 27.6-79.7 44-128 44C93.1 416 0 322.9 0 208S93.1 0 208 0s208 93.1 208 208c0 48.3-16.4 92.7-44 128h16.3c6.4 0 12.5 2.5 17 7l99.7 99.7c9.3 9.4 9.3 24.6 0 34zM344 208c0-75.2-60.8-136-136-136S72 132.8 72 208s60.8 136 136 136 136-60.8 136-136z\\"
          >
          </path>
        </svg>
        hidden
      </div>
    </div>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label1:
      </span>
      <span class=\\"components-label-value\\">
        foo
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        label2:
      </span>
      <span class=\\"components-label-value\\">
        bar
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @cluster:
      </span>
      <span class=\\"components-label-value\\">
        default
      </span>
    </span>
  </div>
  <div class=\\" tooltip-trigger\\">
    <span class=\\"components-label badge bg-default components-label-dark components-label-with-hover\\">
      <span class=\\"components-label-name\\">
        @receiver:
      </span>
      <span class=\\"components-label-value\\">
        by-name
      </span>
    </span>
  </div>
  <a href=\\"http://link.example.com\\"
     target=\\"_blank\\"
     rel=\\"noopener noreferrer\\"
     class=\\"components-label components-label-with-hover badge components-grid-annotation-link\\"
  >
    <svg aria-hidden=\\"true\\"
         focusable=\\"false\\"
         data-prefix=\\"fas\\"
         data-icon=\\"external-link-alt\\"
         class=\\"svg-inline--fa fa-external-link-alt fa-w-16 \\"
         role=\\"img\\"
         xmlns=\\"http://www.w3.org/2000/svg\\"
         viewbox=\\"0 0 512 512\\"
    >
      <path fill=\\"currentColor\\"
            d=\\"M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z\\"
      >
      </path>
    </svg>
    link
  </a>
  <div class=\\"components-grid-alertgrid-alertgroup-shared-silence rounded-0 border-0\\">
    <div class=\\"card my-1 components-managed-silence\\">
      <div class=\\"card-header rounded-0 border-bottom-0 px-3\\">
        <div class=\\"d-flex flex-row\\">
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <svg aria-hidden=\\"true\\"
                 focusable=\\"false\\"
                 data-prefix=\\"fas\\"
                 data-icon=\\"bell-slash\\"
                 class=\\"svg-inline--fa fa-bell-slash fa-w-20 components-managed-silence-icon text-muted\\"
                 role=\\"img\\"
                 xmlns=\\"http://www.w3.org/2000/svg\\"
                 viewbox=\\"0 0 640 512\\"
            >
              <path fill=\\"currentColor\\"
                    d=\\"M633.82 458.1l-90.62-70.05c.19-1.38.8-2.66.8-4.06.05-7.55-2.61-15.27-8.61-21.71-19.32-20.76-55.47-51.99-55.47-154.29 0-77.7-54.48-139.9-127.94-155.16V32c0-17.67-14.32-32-31.98-32s-31.98 14.33-31.98 32v20.84c-40.33 8.38-74.66 31.07-97.59 62.57L45.47 3.37C38.49-2.05 28.43-.8 23.01 6.18L3.37 31.45C-2.05 38.42-.8 48.47 6.18 53.9l588.35 454.73c6.98 5.43 17.03 4.17 22.46-2.81l19.64-25.27c5.42-6.97 4.17-17.02-2.81-22.45zM157.23 251.54c-8.61 67.96-36.41 93.33-52.62 110.75-6 6.45-8.66 14.16-8.61 21.71.11 16.4 12.98 32 32.1 32h241.92L157.23 251.54zM320 512c35.32 0 63.97-28.65 63.97-64H256.03c0 35.35 28.65 64 63.97 64z\\"
              >
              </path>
            </svg>
          </div>
          <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
            <div class=\\"font-italic components-managed-silence-comment text-truncate overflow-hidden\\">
              Mocked Silence
            </div>
            <div class=\\"components-managed-silence-cite mt-1\\">
              <span class=\\"text-muted me-2 font-italic\\">
                — me@example.com
              </span>
              <span class=\\"badge bg-danger align-text-bottom p-1\\">
                Expired 14 hours ago
              </span>
            </div>
          </div>
          <div class=\\"flex-shrink-0 flex-grow-0\\">
            <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
              <span class=\\"badge components-label with-click\\">
                <svg aria-hidden=\\"true\\"
                     focusable=\\"false\\"
                     data-prefix=\\"fas\\"
                     data-icon=\\"chevron-down\\"
                     class=\\"svg-inline--fa fa-chevron-down fa-w-14 fa-rotate-180 components-managed-silence-icon m-auto text-muted cursor-pointer\\"
                     role=\\"img\\"
                     xmlns=\\"http://www.w3.org/2000/svg\\"
                     viewbox=\\"0 0 448 512\\"
                     style=\\"transition: transform 0.25s ease-in-out;\\"
                >
                  <path fill=\\"currentColor\\"
                        d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"
                  >
                  </path>
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
